<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attempt_all_the_questions"
            android:textSize="22sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/codename_card"
            cardCornerRadius="20dp"
            cardElevation="20dp"
            cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/codename"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RadioGroup
                    android:id="@+id/codename_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/oreo_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Oreo"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/kitkat_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kitkat"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/nougat_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nougat"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/release_card"
            cardCornerRadius="20dp"
            cardElevation="20dp"
            cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/first_version"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RadioGroup
                    android:id="@+id/release_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/twenty_ten_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2010"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/nineteen_sixty_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1960"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/twenty_eleven_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2011"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/founder_card"
            cardCornerRadius="20dp"
            cardElevation="20dp"
            cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/founder"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RadioGroup
                    android:id="@+id/founder_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rubin_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Andy Rubin"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/bill_gates_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bill Gates"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/trump_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Trump"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/owner_card"
            cardCornerRadius="20dp"
            cardElevation="20dp"
            cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/parent_company"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RadioGroup
                    android:id="@+id/owner_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/google_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/microsoft_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/microsoft"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/facebook_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fb"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/kernel_card"
            cardCornerRadius="20dp"
            cardElevation="20dp"
            cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/kernel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RadioGroup
                    android:id="@+id/kernel_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/linux_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/linux"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/windows_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/windows"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/unix_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unix"
                        android:textAppearance="?android:textAppearanceMedium" />
                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/git_creator_card"
            cardCornerRadius="20dp"
            cardElevation="20dp"
            cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/who_created_git_hint"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/creator_editlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/creator_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:hint="@string/creator_of_git_hint"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/language_card"
            cardCornerRadius="20dp"
            cardElevation="20dp"
            cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/what_language"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <CheckBox
                    android:id="@+id/java_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/java" />

                <CheckBox
                    android:id="@+id/kotlin_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kotlin" />

                <CheckBox
                    android:id="@+id/swift_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swift" />

                <CheckBox
                    android:id="@+id/c_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>